fix script build

--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,12 @@
             <button type="submit" id="play">Play with Fuzzy</button>
           </div>
           <div class="w3-third">
-            <h4>Sleep: <span id="sleepStatus"></span></h4></h4>
-            <button type="submit" id="sleep">Naptime, Fuzzy!</button>
+            <h4>Sleep: <span id="sleepStatus"></span></h4>
+            <button id="sleep">Naptime, Fuzzy!</button>
           </div>
+        </div>
       </form>
-      </div>
+
     </div>
   </body>
 </html>
